# AoC2022

./: .gitignore  Makefile  README.md  main.py  main_test.py  pyproject.toml
src/solutions/day1/: __init__.py  __main__.py  day1_test.py
src/solutions/day10/: __init__.py  __main__.py  day10_test.py
src/solutions/day11/: __init__.py  __main__.py  day11_test.py
src/solutions/day12/: __init__.py  __main__.py  day12_test.py
src/solutions/day13/: __init__.py  __main__.py  day13_test.py
src/solutions/day14/: __init__.py  __main__.py  day14_test.py
src/solutions/day15/: __init__.py  __main__.py  day15_test.py
src/solutions/day16/: __init__.py  __main__.py  day16_test.py
src/solutions/day17/: __init__.py  __main__.py  day17_test.py
src/solutions/day18/: __init__.py  __main__.py  day18_test.py
src/solutions/day19/: __init__.py  __main__.py  day19_test.py
src/solutions/day2/: __init__.py  __main__.py  day2_test.py
src/solutions/day20/: __init__.py  __main__.py  day20_test.py
src/solutions/day21/: __init__.py  __main__.py  day21_test.py
src/solutions/day22/: __init__.py  __main__.py  day22_test.py
src/solutions/day23/: __init__.py  __main__.py  day23_test.py
src/solutions/day24/: __init__.py  __main__.py  day24_test.py
src/solutions/day25/: __init__.py  __main__.py  day25_test.py
src/solutions/day3/: __init__.py  __main__.py  day3_test.py
src/solutions/day4/: __init__.py  __main__.py  day4_test.py
src/solutions/day5/: __init__.py  __main__.py  day5_test.py
src/solutions/day6/: __init__.py  __main__.py  day6_test.py
src/utils/: files.py
(+12 files in other folders)
